atualização do css
adição do overflow: hidden nos cards e ajuste das bordas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,8 +86,9 @@ body {
 }
 
 .game-card {
-  border: 3px solid #FFFFFF;
+  border: 2px solid #FFFFFF;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .footer {
