--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,13 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   padding: 5px 15px;
+  transition: 0.3s;
+}
+
+.menu__link:hover {
+  color: #000000;
+  background-color: #FFFFFF;
+  transition: 0.3s;
 }
 
 .main__text {
@@ -88,8 +95,10 @@ body {
 }
 
 .game-card {
+  display: flex;
+  flex-direction: column;
   width: 300px;
-  height: 460px;
+  height: 456px;
   border: 2px solid #FFFFFF;
   border-radius: 10px;
   overflow: hidden;
