--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-family: 'Fredoka One', cursive;
   background-color: #FFFFFF;
   padding: 0 2em;
@@ -35,6 +36,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 3em;
+  margin: 25px 0;
 }
 
 .menu__link {
@@ -58,7 +60,7 @@ body {
   display: none;
 }
 
-/* Conte*/
+/* Conteudo principal*/
 
 .main__text {
   color: #FFFFFF;
@@ -149,8 +151,76 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+
+  #btn-mobile {
+    display: flex;
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+
+  #hamburguer {
+    border-top: 2px solid;
+    width: 20px;
+  }
+
+  #hamburguer::after, #hamburguer::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 2px;
+    margin-top: 5px;
+    background: currentColor;
+    transition: .3s;
+    position: relative;
+  }
+
+  #nav.active #hamburguer {
+    border-top-color: transparent;
+    transition: .3s;
+  }
+
+  #nav.active #hamburguer::before {
+    transform: rotate(135deg);
+  }
+
+  #nav.active #hamburguer::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
+
   .menu {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    visibility: hidden;
+    overflow-y: hidden;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 63px;
+    right: 0;
+    background-color: #FFFFFF;
+    transition: .6s;
+
+    gap: 0;
+  }
+
+  #nav.active .menu {
+    visibility: visible;
+    height: calc(100vh - 86px);
+    transition: .6s;
+  }
+
+  .menu__link {
+    background-color: #FFFFFF;
+    color: #000000;
+    border-bottom: 1px solid;
+    width: 90%;
+    border-radius: 0;
   }
 
   .last-game {
