--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,14 @@ root {
   --link-color: #FFFFFF;
 }
 
+a {
+  text-decoration: none;
+}
+
+.title a:visited {
+  color: #000000;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -258,6 +266,10 @@ body {
   background-color: #2146C7;
   color: #FFFFFF;
   font-weight: 600;
+}
+
+.invisivel {
+  display: none;
 }
 
 /* Sobre */
