--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ body {
   flex-wrap: wrap;
   gap: 30px;
   margin: 1rem 3rem;
+  min-height: 70vh;
 }
 
 .game-card {
@@ -161,6 +162,12 @@ body {
 
 @media screen and (max-width: 768px) {
 
+  .header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+  
   #btn-mobile {
     display: flex;
     padding: .5rem 1rem;
@@ -237,9 +244,21 @@ body {
   }
 }
 
+@media screen and (max-width: 425px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .game-card {
+    height: 375px;
+  }
+}
+
 /* Games */
 .barra-busca {
-  margin: 10px auto;
+  margin: 16px auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -258,6 +277,7 @@ body {
   background-color: transparent;
   padding: 8px;
   font-size: 16px;
+  width: 270px;
 }
 
 .barra-busca__btn-busca {
