--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,10 @@ body {
 }
 
 @media screen and (max-width: 425px) {
+  .menu {
+    top: 40px;
+  }
+  
   .title {
     font-size: 1.5rem;
   }
