--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -12,12 +12,12 @@
   --link-color: #ffffff;
 }
 
-.article {
-  margin: 1rem 3rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /*max-width: 928px*/
+h2 {
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
 }
 
 .game-banner {
@@ -43,10 +43,13 @@
 .game-banner__description {
   color: var(--second-text-color);
   font-weight: 400;
+  padding: 1rem 2rem;
+  text-align: center;
 }
 
 .game-banner__footer {
   display: flex;
   justify-content: space-around;
   color: var(--amarelo);
+  padding-top: 1rem;
 }
