--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,8 @@ body {
 
 .menu__link {
   font-size: 24px;
-  color: #ffffff;
+  /*color: #ffffff;*/
+  color: var(--amarelo);
   border-radius: 10px;
   text-decoration: none;
   text-transform: uppercase;
@@ -68,8 +69,7 @@ body {
 }
 
 .menu__link:hover {
-  color: #000000;
-  background-color: #ffffff;
+  color: #fff;
   transition: 0.3s;
 }
 
@@ -79,20 +79,14 @@ body {
 }
 
 .subtitle {
-  margin: 1rem 3rem;
   padding: 10px 0;
   color: var(--subtitle-color);
 }
 /* Conteudo principal*/
 
-.main {
-  min-height: 59vh;
-}
-
 .main__text {
   color: var(--text-color);
   font-size: 18px;
-  margin: 1rem 3rem;
 }
 
 .main__image {
@@ -106,7 +100,6 @@ body {
   color: var(--second-text-color);
   background: url(../img/azul-escuro.png);
   background-size: cover;
-  margin: 1rem 3rem;
   border-top: 3px solid #ffffff;
 }
 
@@ -125,7 +118,7 @@ body {
 }
 
 .last-game__info__link:hover {
-  color: var(--background);
+  color: #fff;
 }
 
 .title__more-games {
@@ -139,8 +132,6 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
-  margin: 1rem 3rem;
-  min-height: 59vh;
 }
 
 .game-card {
@@ -334,5 +325,3 @@ body {
 .invisivel {
   display: none;
 }
-
-/* Sobre */
