--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,19 +144,21 @@ body {
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
   transition: 0.3s;
+  background-color: #fff;
 }
 
 .game-card:hover {
   transform: scale3d(1.1, 1.1, 1);
 }
 .game-card__img {
-  height: 352px;
+  height: 296px;
 }
 
 .game-card__description {
   display: flex;
   justify-content: space-between;
   padding: 0 16px;
+  margin-top: -4px;
   color: #ffffff;
   background-image: url(../img/azul-escuro.png);
   background-size: cover;
@@ -169,6 +171,11 @@ body {
   padding: 16px;
   text-decoration: none;
   color: #000;
+}
+
+.game-card__p {
+  text-align: center;
+  color: var(--text-color);
 }
 
 .footer {
