--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -22,6 +22,10 @@ h3 {
   font-weight: 400;
 }
 
+.author {
+  padding-right: 1em;
+}
+
 .game-banner {
   background: url(../img/azul-escuro.png);
   background-size: cover;
