--- a/assets/css/swiper.css
+++ b/assets/css/swiper.css
@@ -1,10 +1,11 @@
 .swiper {
-  width: 70%;
-  margin-bottom: 2rem;
+  width: 100%;
+  background-color: hsl(0, 0%, 100%);
+  padding-bottom: 2rem;
 }
 
 .swiper h3 {
-  padding: 1em 0;
+  padding: 1em 4em;
 }
 
 .swiper-slide img {
