--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -66,7 +66,7 @@ h3 {
 }
 
 .banner__demons-souls .game-banner__image {
-  object-fit: none;
+  object-fit: cover;
   object-position: 50% 64%;
 }
 
