--- a/assets/css/swiper.css
+++ b/assets/css/swiper.css
@@ -1,8 +1,8 @@
 .swiper {
-  width: 100%;
   background-color: hsl(0, 0%, 100%);
   padding-bottom: 2rem;
   z-index: 0;
+  padding: 24px 64px;
 }
 
 .swiper h3 {
